# wreck-it

./: .docs-state.json  .feature-dev-state.json  .features-state.json  .gitignore  .md-import-state.json  .merge-state.json  .observability-state.json  .planner-state.json  .wreck-it-state.json  .wreck-it.toml  Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md  docs-tasks.json  dogfood-tasks.json  feature-dev-tasks.json  features-tasks.json  flake.nix  md-import-tasks.json  planner-tasks.json  tasks.json
.github/workflows/: ci.yml  deploy.yml  dogfood.yml  install.yml  plan.yml  ralph.yml  unstuck.yml
.wreck-it/: config.toml
.wreck-it/plans/: feature-dev-tasks.json--assessor.json  feature-dev-tasks.json--planner.json
.wreck-it/prompts/: coverage_enforcer.md  ideas.md
.wreck-it/seed/: .wreck-it.toml  docs-tasks.json  features-tasks.json  planner-tasks.json
WreckItBoard/WreckItBoard/: ContentView.swift  WreckItBoard-Bridging-Header.h  WreckItBoardApp.swift
WreckItBoard/WreckItBoard.xcodeproj/: project.pbxproj
WreckItBoard/WreckItBoard/Bridge/: RustBridge.swift  wreck_it.h
WreckItBoard/WreckItBoard/Models/: ProjectStore.swift  TaskModel.swift
WreckItBoard/WreckItBoard/Views/: BoardView.swift  EpicListView.swift  NewTaskSheet.swift  TaskCardView.swift  TaskDetailView.swift
action/: Dockerfile  action.yml  entrypoint.sh  sample-workflow.yml
cli/: Cargo.toml
cli/src/: agent.rs  agent_cache.rs  agent_memory.rs  artefact_store.rs  browser_approve.rs  changelog_generator.rs  cli.rs  cloud_agent.rs  config_manager.rs  cost_tracker.rs  coverage_enforcer.rs  error_classifier.rs  fan_out.rs  ffi.rs  gastown_client.rs  github_app.rs  github_auth.rs  github_client.rs  graph.rs  headless.rs  headless_config.rs  headless_state.rs  install.rs  integration_eval.rs  interface_change_detector.rs  lib.rs  main.rs  mcp_server.rs  merge.rs  notifier.rs  openclaw.rs  otel.rs  plan_migration.rs  plan_wizard.rs  planner.rs  project_api.rs  prompt_loader.rs  prompt_optimizer.rs  provenance.rs  ralph_loop.rs  (+13 more)
cli/src/kanban/: jira.rs  linear.rs  mod.rs  trello.rs
cli/src/log_source/: cloudflare.rs  mod.rs  seq.rs
core/: Cargo.toml
core/src/: config.rs  iteration.rs  lib.rs  plan_migration.rs  provenance.rs  replanner.rs  state.rs  store.rs  task_manager.rs  types.rs
docs/: architecture.md  ci-headless.md  getting-started.md  github-app.md  intro.md  multi-repo.md  research-notes.md  roadmap.md
site/docs/: docusaurus.config.ts  package-lock.json  package.json
site/docs/docs/: architecture.md  getting-started.md  intro.md  research-notes.md  roadmap.md
site/docs/src/css/: custom.css
site/landing/: index.html
site/portal/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
site/portal/src/: App.tsx  index.css
site/portal/src/api/: client.ts
site/portal/src/auth/: AuthContext.tsx  authState.ts  useAuth.ts
site/portal/src/components/: Layout.tsx  ProtectedRoute.tsx
site/portal/src/pages/: AuthCallback.tsx  Dashboard.tsx  Installations.tsx  Login.tsx  Plan.tsx  RepoConfig.tsx
specs/: 001-agent-task-execution.md  002-realtime-portal.md  003-mcp-server-integration.md  004-scheduled-execution.md  005-portal-plan-mode.md  006-plugin-trigger-system.md
src/: agent.rs  agent_memory.rs  artefact_store.rs  cli.rs  cloud_agent.rs  gastown_client.rs  headless.rs  headless_config.rs  headless_state.rs  integration_eval.rs  main.rs  openclaw.rs  planner.rs  provenance.rs  ralph_loop.rs  replanner.rs  repo_config.rs  state_worktree.rs  task_manager.rs  templates.rs  tui.rs  types.rs
tasks/: docs-tasks.json  features-tasks.json  observability-tasks.json
templates/engineering-team/: cohesiveness-tasks.json  dependency-updates-tasks.json  feature-dev-tasks.json  features-tasks.json  planner-tasks.json  reporter-tasks.json  security-gate-tasks.json  template.toml  test-coverage-tasks.json  unstuck-tasks.json
templates/workflows/: plan.yml  ralph.yml  unstuck.yml
worker/: Cargo.toml  README.md  wrangler.toml
worker/src/: api.rs  durable_object.rs  github.rs  github_app.rs  kv_store.rs  lib.rs  portal_api.rs  processor.rs  pulse.rs  scheduler.rs  types.rs  webhook.rs
