[package]
name = "wreck-it"
version = "0.1.0"
edition = "2021"
authors = ["Matt Preucil"]
license = "MIT"
description = "A TUI agent harness that uses copilot SDK to perform Ralph Wiggum loops"

[dependencies]
# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"

# CLI and config
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP client for Copilot SDK
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "wreck-it"
path = "src/main.rs"
