[package]
name = "wreck-it"
version = "0.1.0"
edition = "2021"
authors = ["Matt Preucil"]
license = "MIT"
description = "A TUI agent harness that uses copilot SDK to perform Ralph Wiggum loops"

[dependencies]
# Shared core types and iteration logic
wreck-it-core = { path = "../core", features = ["clap"] }

# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"

# CLI and config
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# GitHub Copilot SDK
copilot-sdk-supercharged = "1.0"

# HTTP client for direct API calls (GitHub Models)
reqwest = { version = "0.12", features = ["json"] }

# GitHub App JWT signing (RSA / SHA-256)
rsa = { version = "0.9", default-features = false, features = ["std", "pem"] }
sha2 = { version = "0.10", features = ["oid"] }
signature = "2.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Randomness (splash animation)
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
walkdir = "2.4"

# PATH lookup for copilot binary
which = "7"

# Open URLs in the system browser (GitHub OAuth device flow)
open = "5"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "http-proto", "reqwest-client"] }

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "wreck_it"
path = "src/lib.rs"
crate-type = ["lib", "staticlib"]

[[bin]]
name = "wreck-it"
path = "src/main.rs"
