[package]
name = "wreck-it-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared domain types and iteration logic for the wreck-it orchestration framework"

[features]
default = []
clap = ["dep:clap"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"], optional = true }
