[package]
name = "wreck-it-worker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cloudflare Worker webhook handler for the wreck-it orchestration framework"

[lib]
crate-type = ["cdylib"]

[dependencies]
wreck-it-core = { path = "../core" }
worker = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
